# MotionCapture

./: .gitignore  CMakeLists.txt  FrameDefine.yml  Parameters.mat  README.md  calib_params.yml  check_data.ipynb  save_camera_calib_to_yml.m
include/: Acquisition.hpp  CircularDelay.hpp  ConfigParams.hpp  DataProcess.h  DataProcess.hpp  DigitalFilters.h  TemplateMatch.h  Tracker.hpp  moving_average.hpp  operation.h
src/: Acquisition.cpp  AcquisitionMultipleCamera.cpp  DataProcess.cpp  README.md  RetriveImagePairs.cpp  StereoCalib.cpp  TemplateMatch.cpp  Tracker.cpp  main.cpp  moving_average.cpp  operation.cpp  single_calibrate.cpp
utils/: FrameDefine.yml  calib_params.yml  check_data.ipynb  left.mat  right.mat  save_camera_calib_to_yml.m
